# textmd-to-qti

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICK_START.md  QUIZ_SYNTAX_GUIDE.md  README.md  SECURITY.md  TEMPLATE.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/plans/: repository-best-practices-review.md
.github/: CODEOWNERS  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  lint.yml  publish.yml  test.yml
examples/: README.md  simple_quiz.txt
examples/1stsem2025-11057-_-data-structures-and-algorithms-quiz-export/: imsmanifest.xml
examples/1stsem2025-11057-_-data-structures-and-algorithms-quiz-export/ga69c3829dfd16c5d47ac957400f09d22/: assessment_meta.xml
src/text_to_qti/: __init__.py  __main__.py  cli.py
src/text_to_qti/packager/: __init__.py  zip_creator.py
src/text_to_qti/parser/: __init__.py  markdown_parser.py  question_models.py  syntax_validator.py
src/text_to_qti/qti/: __init__.py  assessment.py  base_item.py  canvas_metadata.py  generator.py  manifest.py  utils.py
src/text_to_qti/qti/items/: __init__.py  multiple_choice.py  true_false.py
src/text_to_qti/utils/: __init__.py  errors.py
tests/: __init__.py  conftest.py
tests/fixtures/: mixed_questions.txt  simple_mc.txt  simple_tf.txt
tests/test_packager/: __init__.py
tests/test_parser/: test_markdown_parser.py  test_question_models.py  test_syntax_validator.py
tests/test_qti/: __init__.py  test_generator.py
